// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<ForwardRef(Tooltip)
  classes={
    Object {
      "popper": "popper",
      "tooltip": "tooltip",
    }
  }
  enterDelay={300}
  leaveDelay={3600000}
  placement="top"
  style={
    Object {
      "borderLeftColor": "red",
    }
  }
  title={
    <ForwardRef(Box)
      className="box"
      data-qa="snap-qa"
    >
      SnapTitle
    </ForwardRef(Box)>
  }
>
  <span>
    Snappy Text
  </span>
</ForwardRef(Tooltip)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<ForwardRef(Tooltip)
  classes={
    Object {
      "popper": "popper",
      "tooltip": "tooltip",
    }
  }
  enterDelay={300}
  placement="top"
  title={
    <ForwardRef(Box)
      className="box"
    >
      SnapTitle
    </ForwardRef(Box)>
  }
>
  <span>
    Snappy Text
  </span>
</ForwardRef(Tooltip)>
`;
